# BBOverFloaw

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.903b27a  README.md  TelegramManager.cpp  TelegramManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.qmodel
Telegram/lib/cmake/TgBot/: TgBotConfig.cmake
binance/: Utility.h  kline.cpp  kline.h  restapi.cpp
binance/restapi/: kline.cpp  kline.h  restapi.cpp  restapi.h  symbol.cpp  symbol.h
binance/websocketapi/: aggregate.cpp  aggregate.h  kline.cpp  kline.h  websocketapi.cpp  websocketapi.h
chart/: VolumeGraph.cpp  VolumeGraph.h  VolumeGraph.ui  VolumePercentGraph.cpp  VolumePercentGraph.h  chartwidget.cpp  chartwidget.h  chartwidget.ui  graphicsview.cpp  graphicsview.h  scene.cpp  scene.h  seriitem.cpp  seriitem.h
global/: alarmwidget.cpp  alarmwidget.h  signal.cpp  signal.h  utility.cpp  utility.h
graphicsItem/: pairitem.cpp  pairitem.h
icon/: appico.rc
indicator/: Sma.cpp  Sma.h  bollinger.cpp  bollinger.h
indicator/app/: bollignerbandpercent.cpp  bollignerbandpercent.h  bollignerbandpercent.ui  nearmodel.cpp  nearmodel.h
info/: exchangeinfo.cpp  exchangeinfo.h  exchangeinfo.ui  exchangemodel.cpp  exchangemodel.h  symbol.cpp  symbol.h  tableviewdelegatewritable.cpp  tableviewdelegatewritable.h  ticker.cpp  ticker.h  ticker24h.cpp  ticker24h.h
main/: OrderBookTimeLineDiff.cpp  OrderBookTimeLineDiff.h  OrderBookViewWidget.cpp  OrderBookViewWidget.h  abtractitem.cpp  abtractitem.h  candleitem.cpp  candleitem.h  orderbookitem.cpp  orderbookitem.h  pairtableitem.cpp  pairtableitem.h  rangevolume.cpp  rangevolume.h  series.cpp  series.h  tradeitem.cpp  tradeitem.h  tradelistitem.cpp  tradelistitem.h  viewport.cpp  viewport.h  viewscene.cpp  viewscene.h
series/: seri.cpp  seri.h  series.cpp  series.h
session/: localconfiguration.cpp  localconfiguration.h  sessionmanager.cpp  sessionmanager.h
visio/: Schema.vsdx  ~$$Schema.~vsdx
widget/: candlestick.cpp  candlestick.h  candlestickwindow.cpp  candlestickwindow.h  candlestickwindow.ui  graphicview.cpp  graphicview.h  scene.cpp  scene.h
